--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "packages/uniswap-v4-hooks-vanna"]
 	path = packages/uniswap-v4-hooks-vanna
-	url = git@github.com:EazyReal/uniswap-v4-hooks-vanna.git
+	url = https://github.com/EazyReal/uniswap-v4-hooks-vanna.git
