--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "styled-components": "^6.0.8",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "viem": "1.9.5",
