--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,7 +25,11 @@
     "styled-components": "^6.0.8",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "urql": "^4.0.5",
     "viem": "1.9.5",
     "wagmi": "1.3.11"
+  },
+  "devDependencies": {
+    "@graphprotocol/client-cli": "^3.0.0"
   }
 }
