--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "packages/*"
   ],
   "repository": "https://github.com/Marblez/VannaSwap.git",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "hardhat": "^2.17.3"
+  }
 }
