--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,8 @@
     "dayjs": "^1.11.10",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "ethers": "^6.7.1",
+    "mathjs": "^11.11.1",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
