--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethersproject/abstract-provider": "^5.7.0",
     "@rainbow-me/rainbowkit": "1.0.11",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
@@ -17,7 +18,7 @@
     "dayjs": "^1.11.10",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
-    "ethers": "^6.7.1",
+    "ethers": "5.0.8",
     "mathjs": "^11.11.1",
     "next": "13.5.2",
     "postcss": "8.4.30",
